tests/type_errors/minimum_variant.nos
# expect: Blue
# Variants auto-derive Ord (alphabetical by constructor name)
type Color = Red | Green | Blue
main() = [Red, Green, Blue].minimum()
